--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
       <version>2.2.3</version>
     </dependency>
 
+        <!-- org.json para manejo de JSON -->
+        <dependency>
+          <groupId>org.json</groupId>
+          <artifactId>json</artifactId>
+          <version>20210307</version>
+        </dependency>
+        
+
   </dependencies>
 
   <build>
